<resources>
    <string name="app_name">蓝牙开关</string>
    <string name="connect">连接蓝牙</string>
    <string name="disconnect">断开蓝牙</string>
    <string name="connectState">连接状态</string>
    <string name="off_1">OFF-1</string>
    <string name="on_1">ON-1</string>
    <string name="off_2">OFF-2</string>
    <string name="on_2">ON-2</string>
    <string name="off_3">OFF-3</string>
    <string name="on_3">ON-3</string>
    <string name="off_4">OFF-4</string>
    <string name="on_4">ON-4</string>
    <string name="test">Test</string>
    <string name="hint">连接和断开时请点击相应设备</string>
</resources>